--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -49,7 +49,7 @@
                 <button class="btn btn-outline-primary me-2" *ngIf="count == 2" (click)="save()">Submit</button>
             </div>
             <div class="p-2">
-                <button class="btn btn-primary me-2" >Exit</button>
+                <button class="btn btn-primary me-2" routerLink="/Start">Exit</button>
                 
             </div>
         </div>
